--- a/nexaura-backend/requirements.txt
+++ b/nexaura-backend/requirements.txt
@@ -27,3 +27,5 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 uvicorn==0.34.3
 websocket-client==1.6.1  # 讯飞 WebSocket API 依赖
+supabase==2.5.0  # Supabase Python Client
+python-dotenv==1.0.1 # Reads key-value pairs from a .env file
