--- a/nexaura-frontend/package.json
+++ b/nexaura-frontend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.1",
     "@vitejs/plugin-vue": "^5.2.4",
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
